committing update to index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <tr>
                         <td>Uploaded</td>
                         <td>First uploaded file</td>
-                        <td><a href="report_folder/uploaded.txt>Download</a></td>
+                        <td><a href="report_folder/uploaded.txt">Download</a></td>
                     </tr>
                     <!-- Next row -->
                     <tr>
