--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
         <body>
             <h1>Available Downloads</h1>
             <p>This page maintained via Python script.</p>
-            <table border=1>
-                <thead>
-                    <tr>
-                        <th>Report Name</th>
-                        <th>Report Content Description</th>
-                        <th>Download</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Uploaded</td>
-                        <td>First uploaded file</td>
-                        <td><a href="report_folder/uploaded.txt" target="_blank">Download</a></td>
-                    </tr>
-                    <!-- Next row -->
-                    <tr>
-                        <td>name</td>
-                        <td>descr</td>
-                        <td>link</td>
-                    </tr>
-                </tbody>
-            </table> 
+            <div class="scrollable-div">
+                <table border=1>
+                    <thead>
+                        <tr>
+                            <th>Report Name</th>
+                            <th>Report Content Description</th>
+                            <th>Download</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Uploaded</td>
+                            <td>First uploaded file</td>
+                            <td><a href="report_folder/uploaded.txt" target="_blank">Download</a></td>
+                        </tr>
+                        <!-- Next row -->
+                        <tr>
+                            <td>name</td>
+                            <td>descr</td>
+                            <td>link</td>
+                        </tr>
+                    </tbody>
+                </table> 
+            </div> 
         </body>
-        </html>
+    </html>
         
