--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <h1>Available Downloads</h1>
             <p>This page maintained via Python script.</p>
-            <div class="scrollable-div">
+            <div class="table-container">
                 <table border=1>
                     <thead>
                         <tr>
