--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
                             <td>First uploaded file</td>
                             <td><a href="report_folder/uploaded.txt" target="_blank">Download</a></td>
                         </tr>
-                        
-            <tr>
-                <td>NextOne</td>
-                <td>Second uploaded file</td>
-                <td><a href="report_folder/uploaded.txt>Download"</a></td>
-            </tr>
-        
+                        <tr>
+                            <td>NextOne</td>
+                            <td>Second uploaded file</td>
+                            <td><a href="report_folder/uploaded.txt>Download"</a></td>
+                        </tr>
+                        <!-- Next row -->        
                         <tr>
                             <td>name</td>
                             <td>descr</td>
