committing update to index

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
                             <td>Second uploaded file</td>
                             <td><a href="report_folder/uploaded.txt>Download"</a></td>
                         </tr>
-                        <!-- Next row -->        
+                                                    <tr>
+                                  <td>NextOne</td>
+                                  <td>Another uploaded file</td>
+                                  <td><a href="report_folder/uploaded.txt" target="_blank">Download</a></td>
+                              </tr>
+                              <!-- Next row -->        
                         <tr>
                             <td>name</td>
                             <td>descr</td>
