--- a/index.html
+++ b/index.html
@@ -25,19 +25,14 @@
                         <tr>
                             <td>NextOne</td>
                             <td>Second uploaded file</td>
-                            <td><a href="report_folder/uploaded.txt>Download"</a></td>
+                            <td><a href="report_folder/uploaded.txt">Download</a></td>
                         </tr>
-                                                    <tr>
-                                  <td>NextOne</td>
-                                  <td>Another uploaded file</td>
-                                  <td><a href="report_folder/uploaded.txt" target="_blank">Download</a></td>
-                              </tr>
-                              <!-- Next row -->        
                         <tr>
-                            <td>name</td>
-                            <td>descr</td>
-                            <td>link</td>
+                            <td>NextOne</td>
+                            <td>Another uploaded file</td>
+                            <td><a href="report_folder/uploaded.txt" target="_blank">Download</a></td>
                         </tr>
+                        <!-- Next row -->        
                     </tbody>
                 </table> 
             </div> 
