--- a/index.html
+++ b/index.html
@@ -18,19 +18,9 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Uploaded</td>
-                            <td>First uploaded file</td>
-                            <td><a href="report_folder/uploaded.txt" target="_blank">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>NextOne</td>
-                            <td>Second uploaded file</td>
-                            <td><a href="report_folder/uploaded.txt">Download</a></td>
-                        </tr>
-                        <tr>
-                            <td>NextOne</td>
-                            <td>Another uploaded file</td>
-                            <td><a href="report_folder/uploaded.txt" target="_blank">Download</a></td>
+                            <td>UploadLog</td>
+                            <td>Uploaded files log</td>
+                            <td><a href="report_folder/uploads.log" target="_blank">View</a></td>
                         </tr>
                         <!-- Next row -->        
                     </tbody>
