committing update to index

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                         <td>Another uploaded file</td>
                         <td><a href="report_folder/uploadnn.txt" target="_blank">Download</a></td>
                     </tr>
+                    <tr>
+                        <td>uploadnn.txt</td>
+                        <td>Another uploaded file</td>
+                        <td><a href="report_folder/uploadnn.txt" target="_blank">Download</a></td>
+                    </tr>
                     <!-- Next row -->
                     </tbody>
                 </table>
